<resources>
    <string name="login_title">Acceder a tu cuenta</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="google_signin_button">Iniciar sesión con Google</string>
    <string name="dont_have_account">¿No tienes una cuenta? Regístrate</string>
    <string name="default_web_client_id">290963246421-t2kb2dmbk0ahvvqu3lcupjd4gbq4o4vt.apps.googleusercontent.com</string>
    <string name="formulario_registro">FORMULARIO DE REGISTRO</string>
    <string name="datos_persona_1">Datos de la Persona 1</string>
    <string name="datos_persona_2">Datos de la Persona 2</string>
    <string name="fill_all_fields">Por favor, complete todos los campos.</string>
    <string name="select_valid_options">Por favor, seleccione una opción válida para cada campo.</string>
    <string name="select_option">Seleccionar</string>
    <string name="select_academic_level">Por favor, seleccione al menos un nivel académico para %1$s.</string>
    <string name="select_personality">Por favor, seleccione al menos una característica de personalidad para %1$s.</string>
    <string name="upload_at_least_one_photo">Por favor, suba al menos una foto.</string>
    <string name="password_too_short">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="nivel_academico_persona_1">Nivel Académico </string>
    <string name="nivel_academico_persona_2">Nivel Académico de la Persona 2</string>
    <string name="personalidad_persona_1">Personalidad </string>
    <string name="personalidad_persona_2">Personalidad</string>
    <string name="nacionalidad_persona_1">Seleccione su nacionalidad</string>
    <string name="nacionalidad_persona_2">Seleccione su nacionalidad</string>
    <string name="raza_persona_2">Seleccione su raza</string>
    <string name="raza_persona_1">Seleccione su raza</string>
    <string name="edad_persona_2">Seleccione su edad</string>
    <string name="edad_persona_1">Seleccione su edad</string>
    <string name="primaria">Primaria</string>
    <string name="secundaria">Secundaria</string>
    <string name="tecnico">Técnico</string>
    <string name="tecnologo">Tecnólogo</string>
    <string name="universitario">Universitario</string>
    <string name="posgrado">Posgrado</string>
    <string name="doctorado">Doctorado</string>
    <string name="posdoctorado">Posdoctorado</string>
    <string name="extrovertido">Extrovertido</string>
    <string name="introvertido">Introvertido</string>
    <string name="aventurero">Aventurero</string>
    <string name="creativo">Creativo</string>
    <string name="analitico">Analítico</string>
    <string name="emocional">Emocional</string>
    <string name="racional">Racional</string>
    <string name="perfeccionista">Perfeccionista</string>
    <string name="sonador">Soñador</string>
    <string name="pragmatico">Pragmático</string>
    <string name="carismatico">Carismático</string>
    <string name="reflexivo">Reflexivo</string>
    <string name="practica_deportes_si">Sí</string>
    <string name="practica_deportes_no">No</string>
    <string name="practica_deportes_a_veces">A veces</string>
    <string name="tipo_deportes">Tipo de Deportes</string>
    <string name="tipo_deportes_hint">Seleccione los deportes que practica</string>
    <string name="frecuencia_deportes">Frecuencia de Práctica Deportiva</string>
    <string name="intereses">Intereses</string>
    <string name="viajar">Viajar</string>
    <string name="cocinar">Cocinar</string>
    <string name="juegos_de_mesa">Juegos de Mesa</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="leer">Leer</string>
    <string name="escuchar_musica">Escuchar Música</string>
    <string name="tocar_instrumentos">Tocar Instrumentos</string>
    <string name="fotografia">Fotografía</string>
    <string name="canto">Canto</string>
    <string name="baile">Baile</string>
    <string name="teatro">Teatro</string>
    <string name="cine">Cine</string>
    <string name="series">Series</string>
    <string name="select_valid_option">Por favor, seleccione una opción válida de los menús desplegables.</string>
    <string name="select_valid_option_nacionalidad">Por favor, seleccione una nacionalidad válida para la primera persona.</string>
    <string name="select_valid_option_raza">Por favor, seleccione una raza válida para la primera persona.</string>
    <string name="select_valid_option_edad">Por favor, seleccione una edad válida para la primera persona.</string>
    <string name="select_valid_option_nacionalidad2">Por favor, seleccione una nacionalidad válida para la segunda persona.</string>
    <string name="select_valid_option_raza2">Por favor, seleccione una raza válida para la segunda persona.</string>
    <string name="select_valid_option_edad2">Por favor, seleccione una edad válida para la segunda persona.</string>
    <string name="museos">Museos</string>
    <string name="conciertos">Conciertos</string>
    <string name="festivales">Festivales</string>
    <string name="voluntariado">Voluntariado</string>
    <string name="aprender_idiomas">Aprender Idiomas</string>
    <string name="realizar_cursos">Realizar Cursos</string>
    <string name="cuidado_del_medio_ambiente">Cuidado del Medio Ambiente</string>
    <string name="creencias">Creencias</string>
    <string name="personalidad_compatibilidad">Preferencia de Compatibilidad de Personalidad</string>
    <string name="personalidad_compatibilidad_igual">Igual</string>
    <string name="personalidad_compatibilidad_similar">Similar</string>
    <string name="personalidad_compatibilidad_opuesta">Opuesta</string>
    <string name="personalidad_compatibilidad_indiferente">Indiferente</string>
    <string name="buscar_pareja_estable">¿Busca una Relación Estable?</string>
    <string name="buscar_pareja_estable_si">Sí</string>
    <string name="buscar_pareja_estable_no">No</string>
    <string name="buscar_pareja_estable_indiferente">Indiferente</string>
    <string name="tipo_de_relacion_buscada">Tipo de Relación Buscada</string>
    <string name="duracion_relacion_deseada">Duración de Relación Deseada</string>
    <string name="planes_primeras_citas">Planes para las Primeras Citas</string>
    <string name="planes_primeras_citas_hint">Escribe algunas ideas para las primeras citas</string>
    <string name="frecuencia_citas">Frecuencia de Citas Deseada</string>
    <string name="app_name">Hello</string>
    <string name="default_notification_channel_id">GENERAL</string>
    <string name="section_app_data">Datos de la Aplicación</string>
    <string name="app_description">Información general de la aplicación o cualquier instrucción importante.</string>
    <string name="accept_terms">Aceptar términos y condiciones</string>
    <string name="next">Siguiente</string>
    <string name="profile_photo_description">Foto de perfil</string>
    <string name="max_photos_allowed">Se permite un máximo de 4 fotos.</string>
    <string name="match_name_description">Nombre de la pareja:</string>
    <string name="match_info_description">Información de la pareja:</string>
    <string name="section_profile_photos">Fotos de Perfil (1–4 fotos)</string>
    <string name="profile_photos_description">Selecciona de 1–4 fotos grupales</string>
    <string name="add_photo">Agregar Foto</string>
    <string name="section_adicional">Datos Adicionales (En Común)</string>
    <string name="tipo_relacion">Tipo de Relación</string>
    <string name="cantidad_hijos">Cantidad de Hijos</string>
    <string-array name="mascotas">
        <item>Perro</item>
        <item>Gato</item>
        <item>Ave</item>
        <item>Reptil</item>
        <item>Peces</item>
        <item>Ninguna</item>
    </string-array>
    <string name="perros">Perro(s)</string>
    <string name="gatos">Gato(s)</string>
    <string name="conejos">Conejo(s)</string>
    <string name="hamsters">Hámster(s)</string>
    <string name="otros_mascotas">Otros</string>
    <string name="religion">Religión</string>
    <string name="religion_catolica">Católica</string>
    <string name="religion_cristiana">Cristiana</string>
    <string name="religion_judia">Judía</string>
    <string name="religion_musulmana">Musulmana</string>
    <string name="religion_hindu">Hindú</string>
    <string name="religion_ninguna">Ninguna</string>
    <string name="ideologia_politica">Ideología Política</string>
    <string name="consumo_alcohol">Consumo de Alcohol</string>
    <string name="consumo_alcohol_si">Sí</string>
    <string name="consumo_alcohol_no">No</string>
    <string name="consumo_alcohol_a_veces">A veces</string>
    <string name="consumo_tabaco">Consumo de Tabaco</string>
    <string name="consumo_tabaco_si">Sí</string>
    <string name="consumo_tabaco_no">No</string>
    <string name="consumo_tabaco_a_veces">A veces</string>
    <string-array name="deportes">
        <item>Seleccionar</item>
        <item>Fútbol</item>
        <item>Baloncesto</item>
        <item>Natación</item>
        <item>Gimnasio</item>
        <item>Yoga</item>
        <item>Ciclismo</item>
        <item>Tenis</item>
        <item>Atletismo</item>
        <item>Voleibol</item>
        <item>Artes marciales</item>
        <item>Senderismo</item>
        <item>Esquí</item>
        <item>Patinaje</item>
        <item>Ninguno</item>
    </string-array>
    <string name="futbol">Fútbol</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="natacion">Natación</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="tenis">Tenis</string>
    <string-array name="hobbies">
        <item>Seleccionar</item>
        <item>Lectura</item>
        <item>Viajes</item>
        <item>Cocina</item>
        <item>Jardinería</item>
        <item>Manualidades</item>
        <item>Películas</item>
        <item>Videojuegos</item>
        <item>Arte</item>
        <item>Fotografía</item>
        <item>Naturaleza</item>
        <item>Escritura</item>
        <item>Ninguno</item>
    </string-array>
    <string name="lectura">Lectura</string>
    <string name="viajes">Viajes</string>
    <string name="dieta">Dieta</string>
    <string name="genero_musical">Género Musical</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="next_button_label">Siguiente</string>
    <string name="otros_deportes">Otros Deportes</string>
    <string name="cocina">Cocina</string>
    <string name="jardineria">Jardinería</string>
    <string name="manualidades">Manualidades</string>
    <string name="otros_hobbies">Otros Hobbies</string>
    <string name="section_preferencias_pareja">Preferencias de Pareja</string>
    <string name="rango_edad_pareja">Rango de Edad de Pareja</string>
    <string name="nivel_academico_pareja">Nivel Académico de Pareja</string>
    <string name="pais_ciudad_pareja">País/Ciudad de Pareja</string>
    <string name="tipo_relacion_pareja">Tipo de Relación de Pareja</string>
    <string name="cantidad_hijos_pareja">Cantidad de Hijos de Pareja</string>
    <string name="mascotas_pareja">Mascotas de Pareja</string>
    <string name="religion_pareja">Religión de Pareja</string>
    <string name="name_hint">Nombre</string>
    <string name="lastname_hint">Apellido</string>
    <string name="name2_hint">Nombre</string>
    <string name="lastname2_hint">Apellido</string>
    <string name="guardar_registro">Guardar Registro</string>
    <string name="profile_image_description">Imagen de perfil del usuario</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="welcome_text">¡Bienvenido!</string>
    <string name="match_name_placeholder">Nombre de la Pareja</string>
    <string name="match_info_placeholder">Información adicional (ej: edad, ubicación)</string>
    <string name="fotos_de_perfil">Fotos de Perfil</string>
</resources>